| Summary: | ASTERISK-28215: app_voicemail: Leaving voicemail sometimes doesn't trigger NOTIFYs | ||||
| Reporter: | George Joseph (gjoseph) | Labels: | pjsip | ||
| Date Opened: | 2018-12-18 10:15:59.000-0600 | Date Closed: | 2018-12-19 05:07:17.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Applications/app_voicemail | ||
| Versions: | 13.24.0 16.1.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Fast system | Attachments: | |||
| Description: | Sometimes, after leaving voicemail for an extension MWI NOTIFYies aren't being sent. It looks like a race condition in "leave_voicemail" where on cleanup we delete the mailbox state, possibly before the stasis message has been handled by res_pjsip_mwi.
| ||||
| Comments: | By: Friendly Automation (friendly-automation) 2018-12-19 05:07:18.670-0600 Change 10820 merged by Friendly Automation: app_voicemail: Don't delete mailbox state unless mailbox is deleted [https://gerrit.asterisk.org/10820|https://gerrit.asterisk.org/10820] By: Friendly Automation (friendly-automation) 2018-12-19 05:09:13.801-0600 Change 10821 merged by Friendly Automation: app_voicemail: Don't delete mailbox state unless mailbox is deleted [https://gerrit.asterisk.org/10821|https://gerrit.asterisk.org/10821] By: Friendly Automation (friendly-automation) 2018-12-19 05:15:29.552-0600 Change 10819 merged by Joshua C. Colp: app_voicemail: Don't delete mailbox state unless mailbox is deleted [https://gerrit.asterisk.org/10819|https://gerrit.asterisk.org/10819] | ||||